--- a/.env
+++ b/.env
@@ -2,3 +2,12 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=0000
 DB_NAME=pruebaexcel
+
+module.exports = {
+    database:{
+        host: process.env.DB_HOST,
+        user: process.env.DB_USER,
+        password: process.env.DB_PASSWORD,
+        port: process.env.DB_PORT
+    }
+}
